# symRay

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindGINAC.cmake
src/: main.cpp
